<resources>
    <string name="app_name">JNTUH Calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="DoneBy">APPLICATION DONE BY: ANEK JAIN.</string>
    <string name="action_settings">Settings</string>
    <string name="jntuh_cal">JNTUH CALCULATOR</string>
    <string name="Subjects">SUBJECTS</string>
    <string name="Internal">INTERNAL</string>
    <string name="External">EXTERNAL</string>
    <string name="English">English</string>
    <string name="Maths_1">Maths-I</string>
    <string name="MM">Mathematical\n-Methods</string>
    <string name="Engg_Phy">Engineering\n-Physics</string>
    <string name="Engg_Chem">Engineering\n-Chemistry</string>
    <string name="Cp">Computer\n-Programming</string>
    <string name="Engg_Drawing">Engg.Drawing</string>
    <string name="ELCS_Lab">ELCS LAB</string>
    <string name="EP_Lab">EP/EC LAB</string>
    <string name="IT_Lab">IT/EW LAB</string>
    <string name="PS">P&amp;S</string>
    <string name="Mfcs">MFCS</string>
    <string name="Ds">DS</string>
    <string name="Dld">DLD</string>
    <string name="Edc">EDC</string>
    <string name="Bee">BEE</string>
    <string name="EE_Lab">EE Lab</string>
    <string name="Ds_Lab">DS Lab</string>
    <string name="CO">Computer Organisation</string>
    <string name="DBMS">DBMS</string>
    <string name="Java">JAVA</string>
    <string name="ES">ES</string>
    <string name="FLAT">FLAT</string>
    <string name="DAA">DAA</string>
    <string name="Java_Lab">JAVA LAB</string>
    <string name="DBMS_Lab">DBMS LAB</string>
    <string name="PPL">PPL</string>
    <string name="SE">SE</string>
    <string name="CD">CD</string>
    <string name="OS">OS</string>
    <string name="CN">CN</string>
    <string name="IPR">IPR</string>
    <string name="OS_Lab">OS LAB</string>
    <string name="CD_Lab">CD LAB</string>
    <string name="Dr_S">DS</string>
    <string name="IS">IS</string>
    <string name="OOAA">OOA &amp; A</string>
    <string name="STM">STM</string>
    <string name="MEFA">ME&amp;FA</string>
    <string name="WT">WT</string>
    <string name="CTWT_Lab">CT&amp;WT LAB</string>
    <string name="AECS_Lab">AECS LAB</string>
    <string name="LP">LP</string>
    <string name="DP">Des. Pattern</string>
    <string name="DWDM">DW &amp; DM</string>
    <string name="CC">CC</string>
    <string name="CG">CG</string>
    <string name="AI">AI</string>
    <string name="LP_Lab">LP LAB</string>
    <string name="DWM_Lab">DW &amp; M LAB</string>
    <string name="MS">MS</string>
    <string name="WS">WS</string>
    <string name="Da_S">DS</string>
    <string name="Min_Project">MINI-PRJ.</string>
    <string name="Sem">Seminar</string>
    <string name="PW">PRJ.-WORK</string>
    <string name="CV">Comp.-VIVA</string>



</resources>
