<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#C1E3DF"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_Subject1"
                android:layout_width="130dp"
                android:layout_height="30dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="2"
                android:text="SUBJECTS"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_Eng"
                android:layout_width="130dp"
                android:layout_height="30dp"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:layout_weight="2"
                android:text="@string/English"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_M1"
                android:layout_width="130dp"
                android:layout_height="30dp"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:layout_weight="2"
                android:text="@string/Maths_1"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_MM"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:layout_weight="2"
                android:text="@string/MM"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_Phy"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="2"
                android:text="@string/Engg_Phy"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_Chem"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="2"
                android:text="@string/Engg_Chem"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_Cp"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="2"
                android:text="@string/Cp"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_Draw"
                android:layout_width="130dp"
                android:layout_height="30dp"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:layout_weight="2"
                android:text="@string/Engg_Drawing"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_ElcsLab"
                android:layout_width="130dp"
                android:layout_height="30dp"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:layout_weight="2"
                android:text="@string/ELCS_Lab"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_EpLab"
                android:layout_width="130dp"
                android:layout_height="30dp"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:layout_weight="2"
                android:text="@string/EP_Lab"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_ItLab"
                android:layout_width="130dp"
                android:layout_height="30dp"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:layout_weight="2"
                android:text="@string/IT_Lab"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        //INTERNAL LAYOUT

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_Internal1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:text="INTERNAL"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_Int_Eng"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:hint="25"
                android:inputType="numberSigned"
                android:maxLength="2"
                android:textColor="#000000"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/et_Int_M1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="#FFFFFF"
                android:hint="25"
                android:inputType="numberSigned"
                android:maxLength="2"
                android:textColor="#000000"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/et_Int_MM"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="#FFFFFF"
                android:hint="25"
                android:inputType="numberSigned"
                android:maxLength="2"
                android:textColor="#000000"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/et_Int_Phy"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#FFFFFF"
                android:hint="25"
                android:inputType="numberSigned"
                android:maxLength="2"
                android:textColor="#000000"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/et_Int_Chem"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="#FFFFFF"
                android:hint="25"
                android:inputType="numberSigned"
                android:maxLength="2"
                android:textColor="#000000"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/et_Int_Cp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="#FFFFFF"
                android:hint="25"
                android:inputType="numberSigned"
                android:maxLength="2"
                android:textColor="#000000"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/et_Int_Draw"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="#FFFFFF"
                android:hint="25"
                android:inputType="numberSigned"
                android:maxLength="2"
                android:textColor="#000000"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/et_Int_ElcsLab"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#FFFFFF"
                android:hint="25"
                android:inputType="numberSigned"
                android:maxLength="2"
                android:textColor="#000000"
                android:textSize="30sp" />


            <EditText
                android:id="@+id/et_Int_EpLab"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="#FFFFFF"
                android:hint="25"
                android:inputType="numberSigned"
                android:maxLength="2"
                android:textColor="#000000"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/et_Int_ItLab"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="#FFFFFF"
                android:hint="25"
                android:inputType="numberSigned"
                android:maxLength="2"
                android:textColor="#000000"
                android:textSize="30sp" />


        </LinearLayout>

        //EXTERNAL LAYOUT

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_External1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="2dp"
                android:text="EXTERNAL"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_Ext_Eng"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:hint="75"
                android:inputType="numberSigned"
                android:maxLength="2"
                android:textColor="#000000"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/et_Ext_M1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="#FFFFFF"
                android:hint="75"
                android:inputType="numberSigned"
                android:maxLength="2"
                android:textColor="#000000"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/et_Ext_MM"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="#FFFFFF"
                android:hint="75"
                android:inputType="numberSigned"
                android:maxLength="2"
                android:textColor="#000000"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/et_Ext_Phy"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#FFFFFF"
                android:hint="75"
                android:inputType="numberSigned"
                android:maxLength="2"
                android:textColor="#000000"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/et_Ext_Chem"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="#FFFFFF"
                android:hint="75"
                android:inputType="numberSigned"
                android:maxLength="2"
                android:textColor="#000000"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/et_Ext_Cp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="#FFFFFF"
                android:hint="75"
                android:inputType="numberSigned"
                android:maxLength="2"
                android:textColor="#000000"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/et_Ext_Draw"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="#FFFFFF"
                android:hint="75"
                android:inputType="numberSigned"
                android:maxLength="2"
                android:textColor="#000000"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/et_Ext_ElcsLab"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#FFFFFF"
                android:hint="75"
                android:inputType="numberSigned"
                android:maxLength="2"
                android:textColor="#000000"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/et_Ext_EpLab"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="#FFFFFF"
                android:hint="75"
                android:inputType="numberSigned"
                android:maxLength="2"
                android:textColor="#000000"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/et_Ext_ItLab"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="#FFFFFF"
                android:hint="75"
                android:inputType="numberSigned"
                android:maxLength="2"
                android:textColor="#000000"
                android:textSize="30sp" />


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <Button
        android:id="@+id/btn_Ok1"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:background="@drawable/button_normal"
        android:text="Calculate"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_Cal1"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:background="@drawable/button_normal"
        android:text="Result"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold" />


</LinearLayout>


    </LinearLayout>