
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#C1E3DF"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_Subject41"
                android:layout_width="130dp"
                android:layout_height="30dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="2"
                android:text="SUBJECTS"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tv_LP"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="2"
                android:text="@string/LP"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_DP"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_weight="2"
                android:text="@string/DP"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_DWDM"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_weight="2"
                android:text="@string/DWDM"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_CC"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_weight="2"
                android:text="@string/CC"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_CG"
                android:layout_width="130dp"
                android:layout_height="30dp"
                android:layout_marginTop="15dp"
                android:layout_weight="2"
                android:text="@string/CG"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_AI"
                android:layout_width="130dp"
                android:layout_height="30dp"
                android:layout_marginTop="15dp"
                android:layout_weight="2"
                android:text="@string/AI"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_LP_Lab"
                android:layout_width="130dp"
                android:layout_height="30dp"
                android:layout_marginTop="15dp"
                android:layout_weight="2"
                android:text="@string/LP_Lab"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_DWM_Lab"
                android:layout_width="130dp"
                android:layout_height="30dp"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:layout_weight="2"
                android:text="@string/DWM_Lab"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        //INTERNAL LAYOUT

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_Internal41"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:text="INTERNAL"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />



            <EditText
                android:id="@+id/et_Int_LP"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="#FFFFFF"
                android:hint="25"
                android:inputType="numberSigned"
                android:maxLength="2"
                android:textColor="#000000"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/et_Int_DP"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="#FFFFFF"
                android:hint="25"
                android:inputType="numberSigned"
                android:maxLength="2"
                android:textColor="#000000"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/et_Int_DWDM"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="#FFFFFF"
                android:hint="25"
                android:inputType="numberSigned"
                android:maxLength="2"
                android:textColor="#000000"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/et_Int_CC"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="#FFFFFF"
                android:hint="25"
                android:inputType="numberSigned"
                android:maxLength="2"
                android:textColor="#000000"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/et_Int_CG"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="#FFFFFF"
                android:hint="25"
                android:inputType="numberSigned"
                android:maxLength="2"
                android:textColor="#000000"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/et_Int_AI"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="#FFFFFF"
                android:hint="25"
                android:inputType="numberSigned"
                android:maxLength="2"
                android:textColor="#000000"
                android:textSize="30sp" />


            <EditText
                android:id="@+id/et_Int_LPLab"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="#FFFFFF"
                android:hint="25"
                android:inputType="numberSigned"
                android:maxLength="2"
                android:textColor="#000000"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/et_Int_DWMLab"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="#FFFFFF"
                android:hint="25"
                android:inputType="numberSigned"
                android:maxLength="2"
                android:textColor="#000000"
                android:textSize="30sp" />


        </LinearLayout>

        //EXTERNAL LAYOUT

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_External41"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:text="EXTERNAL"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />



            <EditText
                android:id="@+id/et_Ext_LP"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="#FFFFFF"
                android:hint="75"
                android:inputType="numberSigned"
                android:maxLength="2"
                android:textColor="#000000"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/et_Ext_DP"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="#FFFFFF"
                android:hint="75"
                android:inputType="numberSigned"
                android:maxLength="2"
                android:textColor="#000000"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/et_Ext_DWDM"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="#FFFFFF"
                android:hint="75"
                android:inputType="numberSigned"
                android:maxLength="2"
                android:textColor="#000000"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/et_Ext_CC"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="#FFFFFF"
                android:hint="75"
                android:inputType="numberSigned"
                android:maxLength="2"
                android:textColor="#000000"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/et_Ext_CG"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="#FFFFFF"
                android:hint="75"
                android:inputType="numberSigned"
                android:maxLength="2"
                android:textColor="#000000"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/et_Ext_AI"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="#FFFFFF"
                android:hint="75"
                android:inputType="numberSigned"
                android:maxLength="2"
                android:textColor="#000000"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/et_Ext_LPLab"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="#FFFFFF"
                android:hint="75"
                android:inputType="numberSigned"
                android:maxLength="2"
                android:textColor="#000000"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/et_Ext_DWMLab"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="#FFFFFF"
                android:hint="75"
                android:inputType="numberSigned"
                android:maxLength="2"
                android:textColor="#000000"
                android:textSize="30sp" />


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btn_Ok41"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_normal"
            android:text="Calculate"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_Cal41"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_normal"
            android:text="Result"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold" />


    </LinearLayout>


</LinearLayout>